@startuml

namespace Yacare.AdministracionBundle.Entity  {
	class Expediente <<class>> {		
	}
	class ConExpediente <<(T,#FF7700) trait>> {
  		+ExpedienteNumero
  		
	}
	class ConActoAdministrativo <<(T,#FF7700) trait>> {
  		+ActoAdministrativoNumero
  		
 	}
}

Yacare.AdministracionBundle.Entity.Expediente..|> Tapir.BaseBundle.Entity.ConId: Implementa
Yacare.AdministracionBundle.Entity.Expediente..|> Tapir.BaseBundle.Entity.ConNombre: Implementa

@enduml
